--- a/my-nginx-chart/templates/deployment.yaml
+++ b/my-nginx-chart/templates/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: gitops-nginx
 spec:
-  replicas: 3
+  replicas: {{ .Values.replicaCount }}  # <--- THIS IS THE MAGIC
   selector:
     matchLabels:
       app: nginx
@@ -17,15 +17,3 @@ spec:
         image: nginx:latest
         ports:
         - containerPort: 80
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: gitops-nginx-service
-spec:
-  type: LoadBalancer
-  selector:
-    app: nginx
-  ports:
-    - port: 80
-      targetPort: 80
