--- a/my-nginx-chart/templates/deployment.yaml
+++ b/my-nginx-chart/templates/deployment.yaml
@@ -17,3 +17,16 @@ spec:
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
         ports:
         - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: gitops-nginx-service
+spec:
+  type: LoadBalancer
+  selector:
+    matchLabels:
+      app: nginx
+  ports:
+    - port: 80
+      targetPort: 80
